--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "raptoreumes_telegram",
   "packageManager": "yarn@3.2.1",
   "scripts": {
-    "start": "node ./src/index.js",
-    "dev": "nodemon ./src/index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
+  },
+  "dependencies": {
+    "telebot": "^1.4.1"
   }
 }
