--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-token= Your bot token
+TOKEN= Your bot token
 
 // Example:
-// token=2094957213:AAFBzKZ3m2Oco8AvbU7wpvaf-tLrzSpIxio
+// TOKEN=2094957213:AAFBzKZ3m2Oco8AvbU7wpvaf-tLrzSpIxio
