--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 TOKEN= Your bot token
+CHART_API= Secret chart api URL
 
 // Example:
-// TOKEN=2094957213:AAFBzKZ3m2Oco8AvbU7wpvaf-tLrzSpIxio
+// TOKEN=2094957213:AAFBzKZ3m2Oco8AvbL7wpvaf-tLrzSpIxio
+// CHART_API= Is Secret
